<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.example.bengkuluexist.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detail_gambar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                />
        </FrameLayout>
        <TextView
            android:id="@+id/detail_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/namaitem"
            android:textStyle="bold"
            android:layout_weight="5"/>
        <TextView
            android:id="@+id/detail_kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/kategoriitem"
            android:textStyle="italic"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/deskripsistatic"
            android:textStyle="bold"
            android:layout_weight="0.05"/>

        <TextView
            android:id="@+id/detail_deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/deskripsiitem"
            android:justificationMode="inter_word"
            android:layout_weight="0.05"/>
    </LinearLayout>

</ScrollView>