<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="@dimen/activity_vertical_margin">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_item"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        tools:src="@android:color/darker_gray" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@id/foto_item"
        android:layout_toRightOf="@id/foto_item"
        android:orientation="vertical">
        <TextView
            android:id="@+id/nama_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/nama_item" />
        <TextView
            android:id="@+id/kat_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textStyle="italic"
            android:maxLines="2"
            tools:text="@string/kategori_item" />
        <TextView
            android:id="@+id/ket_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            tools:text="@string/keterangan_item" />
    </LinearLayout>
</RelativeLayout>